         map, so we don't display 16 lines if we don't need to.
20120106 peripherals/flash: add .deps and Makefile to the ignore property
         (Fred).
20120106 README: add suggested compiler for Mac OS X (Fred).
20120109 debugger/breakpoint.c: return the correct page when trying to match
	 breakpoints (fixes bug #3470425).
20120109 debugger/breakpoint.c: remove debugging code.
20120109 peripherals/{disk/{beta.c,plusd.c},ide/{zxatasp.c,zxcf.c}: fix up
         mismerged files.
20120109 peripherals/if1.c: one more mismerged file.
20120112 compat.h,compat/unix/socket.c,compat/win32/socket.c,configure.in,
         peripherals/nic/{w5100.c,w5100_internals.h,w5100_socket.c}: abstract
         out selfpipe functionality.
20120113 compat.h,compat/unix/socket.c,compat/win32/socket.c: completely blind
         attempt to add Win32 "selfpipe" functionality.
20120116 peripherals/spectranet.c: emulate the non-prototype Spectranet.
20120119 debugger/debugger.c,event.c,peripherals/disk/{beta.c,fdd.c,upd_fdc.c,
         wd_fdc.c},rzx.c,spectrum.c,tape.c,timer/timer.c,z80/z80.c: make
         event_register() just blow up if it can't allocate memory.
20120119 debugger/event.c,fuse.c,periph.c,peripherals/{ide/{divide.c,zxatasp.c,
         zxcf.c},if1.[ch],spectranet.[ch]},periph.h,rzx.[ch],tape.[ch]: make
         debugger_event_register() just blow up if it can't allocate memory.
20120119 machine.c,peripherals/{dck.c,if1.c},rzx.c,snapshot.c,tape.c,ui/{
         gtk/{binary.c,picture.c},widget/{menu.c,widget.c},utils.[ch]:
         utils_close_file() can never fail, so don't write excessive code to
         handle it failing.
20120119 debugger/{breakpoint.c,command.c,debugger.h,event.c,expression.c,
         variable.c},event.c,fuse.c,machines/specplus3.c,memory.c,peripherals/
         {dck.c,disk/{beta.c,disciple.c,disk.c,opus.c,plusd.c},ide/ide.c,if1.c,
         if2.c},pokefinder/pokemem.c,rzx.c,settings-header.pl,settings.pl,