@@ -28,7 +28,7 @@
 
 extern const int MEMPOOL_UNTRACKED;
 
-int mempool_init( void );
+void mempool_init( void );
 int mempool_register_pool( void );
 void* mempool_alloc( int pool, size_t size );
 char* mempool_strdup( int pool, const char *string );
