@@ -32,7 +32,7 @@ void printer_frame( void );
 void printer_serial_write( libspectrum_byte b );
 void printer_parallel_strobe_write( int on );
 void printer_parallel_write( libspectrum_word port, libspectrum_byte b );
-int printer_init( void );
+void printer_init( void );
 void printer_end( void );
 
 #endif				/* #ifndef FUSE_PRINTER_H */
